# searchy

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: architecture.md  db-schema.md  mvp-spec.md  roadmap.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: actions.rs  mod.rs  roots.rs  search.rs  settings.rs  status.rs  system.rs
src-tauri/src/core/: db.rs  error.rs  exclusions.rs  mod.rs  query.rs  query_syntax.rs  scanner.rs  state.rs
src-tauri/src/platform/: linux.rs
src-tauri/src/services/: bootstrap.rs  client.rs  daemon.rs  mod.rs  rpc.rs
src/components/: Glyphs.tsx  JokeOverlay.tsx  StatusPill.tsx
src/features/results/: ResultList.tsx
src/features/roots/: RootsPanel.tsx
src/features/search/: useSearch.ts
src/features/settings/: SettingsPanel.tsx
src/features/theme/: ThemeControls.tsx  controlStyles.ts  useAppTheme.ts
src/lib/: resultKind.ts  searchSyntax.ts  tauri.ts  theme.ts  types.ts
src/pages/: LauncherPage.tsx
