[package]
name = "searchy"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
chrono = { version = "0.4.42", features = ["clock"] }
directories = "6.0.0"
globset = "0.4.18"
notify = "8.2.0"
regex = "1.12.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.8.5", features = [] }
thiserror = "2.0.17"
jwalk = "0.8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-single-instance = "2"
